# downloadservice

./: .gitignore  .helmignore  Makefile  README.md  download.sh  pyproject.toml  request.csr  test.key  test.py  upload_certificate.sh
.github/: dependabot.yml
.github/workflows/: lint.yml  python-app.yml  test.yml
downloadservice/: __init__.py  app.py  certificate.py  cli.py
downloadservice/templates/: index.html  test.html
tests/: conftest.py  test_config.py  test_ctadata.py  test_updown.py  test_webdav.py
