[tool.poetry]
name = "downloadservice"
version = "0.7.11"
description = ""
authors = ["Volodymyr Savchenko <contact@volodymyrsavchenko.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
sentry-sdk = {extras = ["flask"], version = "^2.8.0"}
importlib-metadata = "^7.0.0"
pyopenssl = "^24.0.0"
flask-cors = "^4.0.1"
cheroot = "^10.0.1"

[tool.poetry.group.jupyterhub.dependencies]
jupyterhub = "^4.1.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
ctadata = { git = "https://github.com/cta-epfl/ctadata.git", tag = "v0.5.2" }
pytest = "^8.1.1"
psutil = "^5.9.5"
pytest-flask = "^1.2.0"
pytest-timeout = "^2.1.0"
xmltodict = "^0.13.0"
webdav4 = "^0.9.8"
wsgidav = "^4.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
downloadservice = { callable = "downloadservice.cli:main" }
